--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -55,6 +55,10 @@
   justify-content: space-between;
 }
 
+.title_and_link h1 {
+  overflow: hidden;
+}
+
 .content_container_title{
   display: flex;
   gap: 10px;
