--- a/source/VizGurka/wwwroot/css/table-of-contents.css
+++ b/source/VizGurka/wwwroot/css/table-of-contents.css
@@ -42,6 +42,6 @@
   }
   
   .feature_name {
-    border-top: 1px solid #E2E4E9D1;
     padding-top: 5px;
+    border-bottom: 1px solid #E2E4E9D1;
   }
