--- a/source/VizGurka/Pages/Shared/_LandingLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_LandingLayout.cshtml
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/png" href="~/favgurka.png" />
   <link rel="stylesheet" href="~/css/landing.css" asp-append-version="true" />
   <link rel="stylesheet" href="~/css/landing.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
