--- a/source/VizGurka/wwwroot/css/landing.css
+++ b/source/VizGurka/wwwroot/css/landing.css
@@ -1,39 +1,19 @@
-@font-face {
-    font-family:'atkinson';
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
-  }
-  
+
   :root {
     --color-primary: #005795;
   }
   
   .html, body {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    min-height: 100vh;
     overflow-x: hidden;
     box-sizing: border-box;
+    background-image: linear-gradient(to right top, #14151a, #171920, #1a1c25, #1c202b, #1f2431, #2e3340, #3d4350, #4d5361, #707581, #9498a2, #babdc5, #e2e4e9);
   }
 
   body {
-    font-family:'atkinson', sans-serif;
+    font-family:'Roboto', sans-serif;
     background-color: var(--color-primary);
     color: white;
     max-width: 100%;
@@ -41,33 +21,146 @@
     padding: 0;
   }
 
+  .title_and_img {
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+  }
+
+  .title_and_img h1{
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+  .title_and_img img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .repo_link{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5vw;
+    color: #f3f3f3;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #14151a77;
+  }
+
+  .repo_link:hover{
+    opacity: 0.8;
+  }
+
+  .repo_link i{
+    color: #f3f3f3;
+    font-size: 30px;
+  }
+
+  .repo_text{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    color: rgb(172, 169, 169);
+    margin: 0;
+  }
+
+  .repo_text p{
+    font-size: 0.8em;
+    font-weight: 600;
+    margin: 0;
+    color: #f3f3f3;
+  }
+
+  .repo_text ul {
+    text-decoration: none;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 0.5vw;
+  }
+  .repo_text ul li span {
+    text-decoration: none;
+    font-size: 0.8em;
+    color: #E2E4E98F;
+  }
+
+  .repo_text i{
+    font-size: 12px;
+    color: rgb(172, 169, 169);
+  }
+
+  .content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 85vw;
+    height: 88vh;
+  }
+
+  .hero_text_box {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: end;
+    width: 35vw;
+    min-width: 35vw;
+    min-height: 100%;
+  }
+
+  .hero_text_box p {
+    line-height: 1.5;
+    width: 75%;
+  }
+
+  .hero_text_box h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1vh;
+  }
+
+  .hero_text_box a {
+    margin-bottom: 15vh;
+    font-weight: 600;
+    font-size: 1.2rem;
+    text-decoration: none;
+    padding: 15px;
+    width: fit-content;
+    border-radius: 3px;
+    color: white;
+    box-sizing: border-box;
+    background-color: #E2E4E98F;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  .hero_text_box a:hover {
+    background-color: #E2E4E9D1;
+  }
+
 .landing_container_box{
     display: flex;
     flex-direction: column;
+    margin: auto;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    overflow: hidden;
+    width: 85vw;
+    height: 100%;
 }
 
 .title_box{
     display: flex;
     align-items: center;
-    justify-content: left;
-    width: 100vw;
+    justify-content: space-between;
+    width: 85vw;
+    max-height: 10vh;
     margin-top: 2vh;
     gap: 2vw;
-    margin-left: 2vw;
 }
 
-.title_box_title{
-    font-size: 2.5em;
-    font-weight: 700;
-}
 
-.title_box_img{
-  margin-left: 2vw;
-}
 
 .test_choice_box{
     display: flex;
@@ -76,29 +169,37 @@
     justify-content: center;
     width: 100vw;
     margin-top: 2vh;
+    padding: 10px;
 }
 
+
+
 .test_choice_box_title{
-    font-size: 5.5em;
+  margin-top: 0;
+  margin-bottom: 0;
+    width: 100%;
+    font-size: 2rem;
     font-weight: 700;
+    justify-self: left;
 }
 
 .test_choice_box{
     display: flex;
     flex-direction: column;
-    width: 100vw;
-    min-height: 100vh;
-    margin-top: 2vh;
+    max-width: 40vw;
+    min-width: 40vw;
+    height: fit-content;
+    margin-top: 10vh;
     align-items: center;
-    justify-content: start;
+    justify-content: left;
     gap: 2vw;
-    background: white;
+    border-radius: 10px;
 }
 
 .test_choice_box_title{
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 700;
-    color: black;
+    color: white;
 }
 
 .test_choice_box_link_container{
@@ -106,20 +207,19 @@
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
     width: 100%;
-    gap: 4vw;
+    gap: 2vh;
 }
 
 .link{
     display: flex;
-    flex-direction: column;
-    align-items: left;
+    flex-direction: row;
+    align-items: center;
     justify-content: left;
     text-decoration: none;
-    width: calc(22vw - 4vw);
-    height: 20vw;
-    background: var(--color-primary);
+    width: fit-content;
+    max-height: 8vh;
+    background: #E2E4E98F;
     color: white;
     border-radius: 10px;
     text-align: left;
@@ -129,12 +229,8 @@
     box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.89);
 }
 
-.link_img{
-  width: 100%;
-  height: 10vw;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  object-fit: cover;
+.link:hover{
+    background: #E2E4E9D1;
 }
 
 .link_title{
