add script src to fetchrepodetails

--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -5,8 +5,7 @@
 @{
   Layout = "~/Pages/Shared/_LandingLayout.cshtml";
 }
-
-<script src="~/js/catfetcher.js" defer></script>
+<script src="~/js/fetchrepodetails.js" defer></script>
 
 <div class="landing_container">
   <div class="landing_container_box">
