--- a/source/VizGurka/wwwroot/css/navbar.css
+++ b/source/VizGurka/wwwroot/css/navbar.css
@@ -102,18 +102,22 @@
     gap: 1vw;
     padding: 0;
     margin-top: 1vh;
+    transition: 0.2s;
   }
 
   .navbar_links_link a.active{
     color: #f3f3f3;
+    transition: 0.2s;
 }
 
 .navbar_links_link a.active:hover{
     opacity: 0.8;
+    transition: 0.2s;
 }
 
 .navbar_links_link a.inactive:hover{
   opacity: 0.8;
+  transition: 0.2s;
 }
 
   .navbar_links_link a{
