--- a/source/VizGurka/wwwroot/css/table-of-contents.css
+++ b/source/VizGurka/wwwroot/css/table-of-contents.css
@@ -35,6 +35,7 @@
   .table_of_contents a {
     color: #E2E4E9D1;
     text-decoration: none;
+    transition: 0.2s;
   }
 
   .table_of_contents a:hover {
