--- a/source/VizGurka/Pages/Search/Search.cshtml
+++ b/source/VizGurka/Pages/Search/Search.cshtml
@@ -14,9 +14,12 @@
         <a asp-page="/features/features" asp-route-productName="@Model.ProductName" asp-route-id="@Model.FirstFeatureId"
             asp-route-featureId="@Model.FirstFeatureId">@Localizer["Home"]</a>
         <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
-            <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
-            <input class="navbar_search" type="text" id="navbar_search" name="query"
-                placeholder="&#x1F50D; @Localizer["Features, Scenarios"]..." />
+            <div class="search-container">
+                <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
+                <i class="fa fa-search search-icon"></i>
+                <input class="navbar_search" type="text" id="navbar_search" name="query"
+                    placeholder="@Localizer["Features, Scenarios"]..." />
+            </div>
         </form>
     </nav>
 </section>
