--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -1,29 +1,3 @@
-@font-face {
-    font-family:'atkinson';
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
-  }
-  
-  :root {
-    --color-primary: #005795;
-  }
 
   .html, body {
     max-width: 100%;
@@ -33,8 +7,8 @@
   }
 
   body {
-    font-family:'atkinson', sans-serif;
-    color: white;
+    font-family:'Roboto', sans-serif;
+    color: #f3f3f3;
     max-width: 100%;
     margin: 0;
     padding: 0;
@@ -47,7 +21,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    background-color: var(--color-primary);
+    background-color: #14151a;
     width: 100vw;
     height: 10vh;
     z-index: 1000;
@@ -56,17 +30,45 @@
 }
 
 .navbar_img{
-  width: 60px;
+  width: 40px;
 }
 
 .navbar_search{
-    height: 1em;
-    width: 80vw;
-    border-radius: 10px;
-    font-size: 1em;
-    border-style: none;
-    padding: 10px;
-    margin-left: 1vw;
+  color: rgb(172, 169, 169);
+  font-size: 1.2em;
+  font-weight: 700;
+  width: 80vw;
+    background-color: black;
+    padding-left: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 40px;
+    border-radius: 5px;
+    border: none;
+    color: black;
+}
+
+.search-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  font-size: 2em;
+  position: absolute;
+  left: 10px;
+  color: #f3f3f3;
+}
+
+.navbar_search::placeholder {
+  color: rgb(172, 169, 169);
+  font-weight: 500;
+}
+
+.navbar_search:focus {
+  outline: none;
+  background-color: rgb(172, 169, 169);
 }
 
 .navbar nav{
@@ -83,16 +85,13 @@
   text-decoration: none;
   font-size: larger;
   font-weight: 700;
-  color: var(--color-primary);
-  padding-top: 5px;
-  padding-bottom: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 10px;
-  background-color: white;
-  line-height: 1.5;
+  color: #E2E4E9D1;
+  transition: 0.2s;
 }
 
+.navbar nav a:hover{
+  color: white;
+}
 
 .dropdown {
   padding-left: 5px;
@@ -106,6 +105,7 @@
 .dropdown-header {
   cursor: pointer;
   display: flex;
+  height: 2vh;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
@@ -228,8 +228,22 @@
     width: 20vw;
     max-width: 20vw;
     min-height: 90vh;
-    background-color: whitesmoke;
-    border-right: 1px solid rgb(219, 219, 219);
+    background-color: rgb(30, 33, 41);
+}
+
+.search_menu a {
+  color: #E2E4E9D1;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 20px;
+  margin: 0;
+}
+
+.search_menu h1 {
+  color: #E2E4E98F;
+  padding: 20px;
+  margin: 0;
+  font-size: 1.5em;
 }
 
 .search_display{
@@ -237,6 +251,15 @@
   flex-direction: column;
   width: 80vw;
   max-width: 80vw;
+  background-color: rgb(30, 33, 41);
+  padding: 20px;
+}
+
+.search_display p {
+  color: #E2E4E9D1;
+  padding: 20px;
+  margin: 0;
+  font-size: 1.5em;
 }
 
 .search_category {
@@ -255,8 +278,8 @@
   margin-left: auto;
 }
 
-.search_category:hover {
-  background-color: white;
+.search_menu a:hover {
+  color: #2977ff;
 }
 
 .count {
