--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -109,9 +109,20 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
+  background-color: #292a30;
 }
+
+.dropdown-header:hover {
+  background-color: #1e1f26;
+}
+
+.dropdown-header h1 {
+  color: #E2E4E9D1;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-decoration: none;
+}
+
 
 
 .dropdown-content {
