--- a/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewData["Title"] - VizGurka</title>
     <link rel="icon" type="image/png" href="~/favgurka.png" />
     <link rel="stylesheet" href="~/css/search.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/search-queries.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
