--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -53,8 +53,23 @@
   max-width: 25vw;
   margin-top: 25px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 20px;
+}
+
+.sidemenu_header_title {
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
+}
+
+.sidemenu_header .sidemenu_header_overall {
+  color: #E2E4E9D1;
+  text-decoration: none;
+}
+
+.sidemenu_header .sidemenu_header_overall:hover {
+  color: #2977ff;
 }
 
 .sidemenu_header h2{
