--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -1,29 +1,3 @@
-@font-face {
-    font-family:'atkinson';
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-Bold.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Bold.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 700;
-    src:url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-BoldItalic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-style: italic;
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Italic.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Italic.woff")format("woff");
-  }
-  @font-face {
-    font-family:'atkinson';
-    font-weight: 400;
-    src:url("../fonts/Atkinson-Hyperlegible-Regular.woff2")format("woff2"),url("../fonts/Atkinson-Hyperlegible-Regular.woff")format("woff");
-  }
-  
-  :root {
-    --color-primary: #005795;
-  }
 
   .html, body {
     max-width: 100%;
@@ -33,8 +7,8 @@
   }
 
   body {
-    font-family:'atkinson', sans-serif;
-    color: white;
+    font-family:'Roboto', sans-serif;
+    color: #f3f3f3;
     max-width: 100%;
     margin: 0;
     padding: 0;
@@ -47,7 +21,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    background-color: var(--color-primary);
+    background-color: #14151a;
     width: 100vw;
     height: 10vh;
     z-index: 1000;
@@ -56,17 +30,45 @@
 }
 
 .navbar_img{
-  width: 60px;
+  width: 40px;
 }
 
 .navbar_search{
-    height: 1em;
-    width: 80vw;
-    border-radius: 10px;
-    font-size: 1em;
-    border-style: none;
-    padding: 10px;
-    margin-left: 1vw;
+  color: rgb(172, 169, 169);
+  font-size: 1.2em;
+  font-weight: 700;
+  width: 80vw;
+    background-color: black;
+    padding-left: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 40px;
+    border-radius: 5px;
+    border: none;
+    color: black;
+}
+
+.search-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  font-size: 2em;
+  position: absolute;
+  left: 10px;
+  color: #f3f3f3;
+}
+
+.navbar_search::placeholder {
+  color: rgb(172, 169, 169);
+  font-weight: 500;
+}
+
+.navbar_search:focus {
+  outline: none;
+  background-color: rgb(172, 169, 169);
 }
 
 .navbar nav{
@@ -83,16 +85,13 @@
   text-decoration: none;
   font-size: larger;
   font-weight: 700;
-  color: var(--color-primary);
-  padding-top: 5px;
-  padding-bottom: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 10px;
-  background-color: white;
-  line-height: 1.5;
+  color: #E2E4E9D1;
+  transition: 0.2s;
 }
 
+.navbar nav a:hover{
+  color: white;
+}
 
 .dropdown {
   padding-left: 5px;
@@ -106,13 +105,23 @@
 .dropdown-header {
   cursor: pointer;
   display: flex;
+  height: 2vh;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
+  background-color: #292a30;
 }
 
+.dropdown-header:hover {
+  background-color: #1e1f26;
+}
+
+.dropdown-header h1 {
+  color: #E2E4E9D1;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-decoration: none;
+}
 
 .dropdown-content {
   max-height: 0;
@@ -155,7 +164,7 @@
   padding-top: 5px;
 }
 
-.scenario_title{
+.scenario_title a{
   margin-bottom: 20px;
 }
 
@@ -163,21 +172,81 @@
   max-height: fit-content;
   padding-left: 10px;
   padding-right: 10px;
-  background-color: whitesmoke;
+  background-color: #14151a;
 }
 
 .dropdown-content.show li {
-  padding: 20px;
+  padding: 10px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   font-size: 1.1em;
   font-weight: 700;
+  background-color: rgb(30, 33, 41);
+}
+
+.dropdown-content.show ul li {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: left;
+  height: fit-content;
+}
+
+.dropdown-content.show ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-left: 0;
+  gap: 5px;
+}
+
+.dropdown-content.show ul li p{
+  font-size: 1rem;
+}
+
+.dropdown-content.show ul li img {
+  width: 20px;
+  height: auto;
+}
+
+.dropdown-content.show ul li a {
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+  font-weight: 400;
+  gap: 5px;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.steps {
+  display: flex;
+  font-size: 1rem;
+  color: #E2E4E9D1;
+  padding: 0;
+}
+
+.steps strong {
+  color: white;
+  font-size: 1rem;
+}
+
+.dropdown-content ul li .steps p {
+  padding-left: 5px;
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+.dropdown-content.show li a:hover {
+  color: #2977ff;
+  
 }
 
 
 .arrow {
-  border: solid black;
+  border: solid #E2E4E9D1;
   border-width: 0 5px 5px 0;
   display: inline-block;
   padding: 6px;
@@ -228,8 +297,23 @@
     width: 20vw;
     max-width: 20vw;
     min-height: 90vh;
-    background-color: whitesmoke;
-    border-right: 1px solid rgb(219, 219, 219);
+    background-color: rgb(30, 33, 41);
+}
+
+.search_menu a {
+  color: #E2E4E9D1;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 20px;
+  margin: 0;
+}
+
+.search_menu h1 {
+  color: #E2E4E98F;
+  padding: 20px;
+  margin: 0;
+  font-weight: 400;
+  font-size: 1.3em;
 }
 
 .search_display{
@@ -237,6 +321,17 @@
   flex-direction: column;
   width: 80vw;
   max-width: 80vw;
+  max-height: 86vh;
+  overflow : auto;
+  background-color: rgb(30, 33, 41);
+  padding: 20px;
+}
+
+.search_display p {
+  color: #E2E4E9D1;
+  padding: 20px;
+  margin: 0;
+  font-size: 1.5em;
 }
 
 .search_category {
@@ -244,7 +339,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.5em;
+  font-size: 1.2em;
   min-width: 15vw;
   text-decoration: underline;
   margin-top: 20px;
@@ -255,8 +350,16 @@
   margin-left: auto;
 }
 
-.search_category:hover {
-  background-color: white;
+.search_menu a:hover {
+  color: #2977ff;
+}
+
+.search_menu a {
+  font-size: 1.2rem;
+  padding: 0;
+  padding-top: 5px;
+  border-bottom: 1px dotted #E2E4E9D1;
+  transition: 0.2s;
 }
 
 .count {
